chore: enable logging in tests